fix dark mode for contact cards

--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,10 @@ strong {
   color: #ffffff;
 }
 
+.dark-mode .card {
+  background: #000000;
+}
+
 .dark-mode .feature-card .uil,
 .dark-mode .navbar-light .navbar-brand,
 .dark-mode h1,
